Use contents partial and remove duplication in group

--- a/templates/partials/list-content.html
+++ b/templates/partials/list-content.html
@@ -14,8 +14,6 @@
     </div>
   {%- endif -%}
 
-  {% for description in contents %}
-    <p>{{ description["description"] }}</p>
-  {% endfor %}
+  {% include 'partials/contents.html' %}
 
 {% endcall %}
