Simplify content class, reduce code overwrites

--- a/templates/partials/list-content.html
+++ b/templates/partials/list-content.html
@@ -1,7 +1,7 @@
 {% from "components/question/_macro.njk" import onsQuestion %}
 
-{% set title = content.content.title %}
-{% set contents = content.content.contents %}
+{% set title = content.title %}
+{% set contents = content.contents %}
 
 {% call onsQuestion({
   "id": question.id,
