Fix Continue button

--- a/templates/listcollectorcontent.html
+++ b/templates/listcollectorcontent.html
@@ -4,6 +4,8 @@
 
 {% set save_on_signout = true %}
 
+{% set continue_button_text = _("Continue") %}
+
 {% block form_content %}
    {% include 'partials/list-content.html' %}
 {% endblock %}
