--- a/templates/partials/list-content.html
+++ b/templates/partials/list-content.html
@@ -2,18 +2,15 @@
 {% set title = content.title %}
 {% set contents = content.contents %}
 
-{% call onsQuestion({
-  "id": question.id,
-  "title": title,
-}) %}
-  {%- if content.list and content.list.list_items -%}
-    {% set list = content.list %}
-    <div class="ons-u-mb-m">
-      {% include 'partials/summary/list-summary.html' %}
-    </div>
-  {%- endif -%}
+<h1>{{ title }}</h1>
 
-  {% include 'partials/contents.html' %}
+{%- if content.list and content.list.list_items -%}
+  {% set list = content.list %}
+  <div class="ons-u-mb-m">
+    {% include 'partials/summary/list-summary.html' %}
+  </div>
+{%- endif -%}
 
-{% endcall %}
+{% include 'partials/contents.html' %}
+
 
