--- a/templates/listcollectorcontent.html
+++ b/templates/listcollectorcontent.html
@@ -5,7 +5,21 @@
 
 {% set continue_button_text = _("Continue") %}
 
+{% set title = content.title %}
+{% set contents = content.contents %}
+
 {% block form_content %}
-   {% include 'partials/list-content.html' %}
+
+  <h1>{{ title }}</h1>
+
+  {%- if content.list and content.list.list_items -%}
+    {% set list = content.list %}
+    <div class="ons-u-mb-m">
+      {% include 'partials/summary/list-summary.html' %}
+    </div>
+  {%- endif -%}
+
+  {% include 'partials/contents.html' %}
+
 {% endblock %}
 
