Dont move button when clicked

--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -80,6 +80,11 @@
 
 
 {% block head %}
+  <style>
+    .ons-btn:active {
+      top: 0;
+    }
+  </style>
   {% if google_tag_manager_id and google_tag_manager_auth %}
     <!--
     Information such as events or variables can be passed to Google Tag Manager via the data layer,
