fix list breaking change

--- a/templates/partials/error-panel.html
+++ b/templates/partials/error-panel.html
@@ -1,5 +1,5 @@
 {% from "components/panel/_macro.njk" import onsPanel %}
-{% from "components/lists/_macro.njk" import onsList %}
+{% from "components/list/_macro.njk" import onsList %}
 
 {% set error_list = [] %}
 {% for error_id, error in form.mapped_errors %}
