--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,52 +1,47 @@
 {% extends 'layouts/_base.html' %}
 {% import 'macros/helpers.html' as helpers %}
 {% from "components/button/_macro.njk" import onsButton %}
-
 {% set hide_sign_out_button = content.hide_sign_out_button %}
 {% set question = content.question %}
 {% set sign_out_url = content.sign_out_url %}
 {% set breadcrumbs = {
-  "ariaLabel": 'Back',
-  "itemsList": [
-    {
-      "url": url_for("post_submission.get_thank_you"),
-      "id": "top-previous",
-      "text": _("Back"),
-      "attributes": {
-        "data-ga": 'previous-link',
-        "data-ga-category": 'Navigation',
-        "data-ga-action": 'Previous',
-        "data-ga-label": "Previous link click"
-      }
-    }
-  ]
+    "ariaLabel": 'Back',
+    "itemsList": [
+        {
+            "url": url_for("post_submission.get_thank_you"),
+            "id": "top-previous",
+            "text": _("Back"),
+            "attributes": {
+                "data-ga": 'previous-link',
+                "data-ga-category": 'Navigation',
+                "data-ga-action": 'Previous',
+                "data-ga-label": "Previous link click"
+            }
+        }
+    ]
 } %}
-
 {% block main %}
-  {% set form = content.form %}
-  {% if form.mapped_errors %}
-    {% set error_title = ngettext('There is a problem with your feedback', 'There are %(num)s problems with your feedback', form.mapped_errors | length) %}
-    {% include 'partials/error-panel.html' %}
-  {% endif %}
-
-  <h1 class="question__title ons-u-fs-xxl" data-qa="feedback-title">{{ content.question.title }}</h1>
-  {%- for answer in question.answers -%}
-    {% include 'partials/answer.html' %}
-  {%- endfor -%}
-
-  {{
-    onsButton({
-      "text": _("Send feedback"),
-      "variants": 'timer',
-      "classes": "ons-u-mt-xl",
-      "attributes": {
-        "data-qa": "btn-submit",
-        "data-ga-category": "Submit button",
-        "data-ga-action": "Send feedback",
-        "data-ga-label": "Send feedback button click"
-      }
+    {% set form = content.form %}
+    {% if form.mapped_errors %}
+        {% set error_title = ngettext('There is a problem with your feedback', 'There are %(num)s problems with your feedback', form.mapped_errors | length) %}
+        {% include 'partials/error-panel.html' %}
+    {% endif %}
+    <h1 class="question__title ons-u-fs-xxl" data-qa="feedback-title">{{ content.question.title }}</h1>
+    {%- for answer in question.answers -%}
+        {% include 'partials/answer.html' %}
+    {%- endfor -%}
+    {{ onsButton({
+        "text": _("Send feedback") ,
+    "variants": 'timer',
+    "classes": "ons-u-mt-xl",
+    "attributes": {
+    "data-qa": "btn-submit",
+    "data-ga-category": "Submit button",
+    "data-ga-action": "Send feedback",
+    "data-ga-label": "Send feedback button click"
+    }
     })
-  }}
-  <br><br>
-
+    }}
+    <br>
+    <br>
 {% endblock %}
