--- a/templates/census-thank-you.html
+++ b/templates/census-thank-you.html
@@ -2,63 +2,62 @@
 {% from 'components/panel/_macro.njk' import onsPanel %}
 {% set hide_sign_out_button = content.hide_sign_out_button %}
 {% set sign_out_url = content.sign_out_url %}
-
 {% block main %}
-  {% set form = content.form %}
-  {% if form and form.mapped_errors %}
-    {% set error_title = _("There is a problem with this page") %}
-    {% include 'partials/error-panel.html' %}
-  {% endif %}
-
-  {% call onsPanel({
-    "type": "success",
-    "classes": "ons-u-mb-s",
-    "iconType": "check",
-    "iconSize": "xl"
-    })
-  %}
-    <h1 data-qa="title">
-      {% if content.form_type == "I" %}
-        {{ _("Thank you for completing your census") }}
-      {% elif content.form_type %}
-        {{ _("Thank you for completing the census") }}
-      {% else %}
-        {{ _("Thank you for completing the survey") }}
-      {% endif %}
-    </h1>
-
-      {% if content.form_type %}
-        {% if content.form_type == "I" %}
-          <p data-qa="guidance">{{ _("Your individual census has been submitted for <strong>{display_address}</strong>").format(display_address = content.display_address) }}</p>
-        {% elif content.form_type == "H" %}
-          <p data-qa="guidance">{{ _("Your census has been submitted for the household at <strong>{display_address}</strong>").format(display_address = content.display_address) }}</p>
-        {% elif content.form_type == "C" %}
-          <p data-qa="guidance">{{ _("Your census has been submitted for the accommodation at <strong>{display_address}</strong>").format(display_address = content.display_address) }}</p>
-          <p>{{ _("Anyone staying at this accommodation for at least 6 months needs to fill in their own individual census, including staff. Your Census Officer will provide you with census forms for your residents.") }}</p>
+    {% set form = content.form %}
+    {% if form and form.mapped_errors %}
+        {% set error_title = _("There is a problem with this page") %}
+        {% include 'partials/error-panel.html' %}
+    {% endif %}
+    {% call onsPanel({
+        "type": "success",
+        "classes": "ons-u-mb-s",
+        "iconType": "check",
+        "iconSize": "xl"
+        })
+        %}
+        <h1 data-qa="title">
+            {% if content.form_type == "I" %}
+                {{ _("Thank you for completing your census") }}
+            {% elif content.form_type %}
+                {{ _("Thank you for completing the census") }}
+            {% else %}
+                {{ _("Thank you for completing the survey") }}
+            {% endif %}
+        </h1>
+        {% if content.form_type %}
+            {% if content.form_type == "I" %}
+                <p data-qa="guidance">
+                    {{ _("Your individual census has been submitted for <strong>{display_address}</strong>").format(display_address = content.display_address) }}
+                </p>
+            {% elif content.form_type == "H" %}
+                <p data-qa="guidance">
+                    {{ _("Your census has been submitted for the household at <strong>{display_address}</strong>").format(display_address = content.display_address) }}
+                </p>
+            {% elif content.form_type == "C" %}
+                <p data-qa="guidance">
+                    {{ _("Your census has been submitted for the accommodation at <strong>{display_address}</strong>").format(display_address = content.display_address) }}
+                </p>
+                <p>
+                    {{ _("Anyone staying at this accommodation for at least 6 months needs to fill in their own individual census, including staff. Your Census Officer will provide you with census forms for your residents.") }}
+                </p>
+            {% endif %}
         {% endif %}
-      {% endif %}
     {% endcall %}
-
-
-  {% call onsPanel({
-    "type": "bare",
-    "classes": "ons-u-mb-s",
-    "iconType": "lock"
-    })
-  %}
-    <p>{{ _("Your personal information is protected by law and will be kept confidential") }}</p>
-  {% endcall %}
-
-
-  {% if form %}
-    <hr class="ons-u-mt-no">
-    <h2 class="ons-u-mt-m">{{ _("Get confirmation email") }}</h2>
-    <p>{{ _("If you would like to be sent confirmation that you have completed your census, enter your email address") }}</p>
-    {% include 'partials/email-form.html' %}
-  {% endif %}
-
-  {% if content.show_feedback_call_to_action %}
-    {% include 'partials/feedback-call-to-action.html' %}
-  {% endif %}
-
+    {% call onsPanel({
+        "type": "bare",
+        "classes": "ons-u-mb-s",
+        "iconType": "lock"
+        })
+        %}
+        <p>{{ _("Your personal information is protected by law and will be kept confidential") }}</p>
+    {% endcall %}
+    {% if form %}
+        <hr class="ons-u-mt-no">
+        <h2 class="ons-u-mt-m">{{ _("Get confirmation email") }}</h2>
+        <p>{{ _("If you would like to be sent confirmation that you have completed your census, enter your email address") }}</p>
+        {% include 'partials/email-form.html' %}
+    {% endif %}
+    {% if content.show_feedback_call_to_action %}
+        {% include 'partials/feedback-call-to-action.html' %}
+    {% endif %}
 {% endblock %}
