--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,17 +1,21 @@
 {% extends 'errors/_base.html' %}
-
 {% set page_title = _("An error has occurred") %}
-
 {% block main %}
-  <h1>{{ _("Sorry, there is a problem with this service") }}</h1>
-  <p>{{ _("Try again later.") }}</p>
-  <p>{{ _("If you have started a survey, your answers have been saved.") }}</p>
-  {% if survey_type and survey_type in SURVEY_TYPES_ALL %}
-    <p>{{ _("<a href='{url}'>Contact us</a> if you need to speak to someone about your survey.").format(url = contact_us_url) }}</p>
-  {% else %}
-    <h2>{{ _("Business surveys") }}</h2>
-    <p>{{ _("If you are completing a business survey and you need to speak to someone about your survey, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) }}</p>
-    <h2>{{ _("All other surveys") }}</h2>
-    <p>{{ _("If you started your survey using an access code and you need to speak to someone about your survey, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) }}</p>
-  {% endif %}
+    <h1>{{ _("Sorry, there is a problem with this service") }}</h1>
+    <p>{{ _("Try again later.") }}</p>
+    <p>{{ _("If you have started a survey, your answers have been saved.") }}</p>
+    {% if survey_type and survey_type in SURVEY_TYPES_ALL %}
+        <p>
+            {{ _("<a href='{url}'>Contact us</a> if you need to speak to someone about your survey.").format(url = contact_us_url) }}
+        </p>
+    {% else %}
+        <h2>{{ _("Business surveys") }}</h2>
+        <p>
+            {{ _("If you are completing a business survey and you need to speak to someone about your survey, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) }}
+        </p>
+        <h2>{{ _("All other surveys") }}</h2>
+        <p>
+            {{ _("If you started your survey using an access code and you need to speak to someone about your survey, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) }}
+        </p>
+    {% endif %}
 {% endblock %}
