--- a/templates/errors/submission-failed.html
+++ b/templates/errors/submission-failed.html
@@ -1,19 +1,24 @@
 {% extends 'errors/_base.html' %}
-
 {% set hide_sign_out_button = True %}
-
 {% set page_title = _("Sorry, there is a problem") %}
-
 {% block main %}
-<h1>{{ _("Sorry, there is a problem") }}</h1>
-<p data-qa="retry">{{ _("You can try to <a href='{url}'>submit your survey again</a>").format(url=url_for('questionnaire.get_questionnaire')) }}</p>
-  {% if survey_type and (survey_type in SURVEY_TYPES_ALL) %}
-    <p>{{ _("If this problem keeps happening, please <a href='{url}'>contact us</a> for help.").format(url=contact_us_url) }}</p>
-  {% else %}
-    <p>{{ _("If this problem keeps happening, please see the following help links.") }}</p>
-    <h2>{{ _("Business surveys") }}</h2>
-    <p>{{ _("If you are completing a business survey, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) }}</p>
-    <h2>{{ _("All other surveys") }}</h2>
-    <p>{{ _("If you started your survey using an access code, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) }}</p>
-  {% endif %}
+    <h1>{{ _("Sorry, there is a problem") }}</h1>
+    <p data-qa="retry">
+        {{ _("You can try to <a href='{url}'>submit your survey again</a>").format(url=url_for('questionnaire.get_questionnaire')) }}
+    </p>
+    {% if survey_type and (survey_type in SURVEY_TYPES_ALL) %}
+        <p>
+            {{ _("If this problem keeps happening, please <a href='{url}'>contact us</a> for help.").format(url=contact_us_url) }}
+        </p>
+    {% else %}
+        <p>{{ _("If this problem keeps happening, please see the following help links.") }}</p>
+        <h2>{{ _("Business surveys") }}</h2>
+        <p>
+            {{ _("If you are completing a business survey, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) }}
+        </p>
+        <h2>{{ _("All other surveys") }}</h2>
+        <p>
+            {{ _("If you started your survey using an access code, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) }}
+        </p>
+    {% endif %}
 {% endblock %}
