--- a/templates/individual_response/confirmation-post.html
+++ b/templates/individual_response/confirmation-post.html
@@ -1,32 +1,30 @@
 {% extends 'layouts/_base.html' %}
 {% from 'components/button/_macro.njk' import onsButton %}
 {% from 'components/panel/_macro.njk' import onsPanel %}
-
 {% set save_on_signout = true %}
-
 {% block main %}
     {% call onsPanel({
         "type": "success",
         "classes": "ons-u-mb-m",
         "iconType": "check",
         "iconSize": "l"
-    }) %}
-        <h1 id="question-title"class="question__title ons-u-mb-xs ons-u-fs-l js-piping">
+        }) %}
+        <h1 id="question-title"
+            class="question__title ons-u-mb-xs ons-u-fs-l js-piping">
             {{ _("A letter has been sent to Individual Resident at {display_address}").format(display_address=display_address) }}
         </h1>
         <p>{{ _("The letter with an individual access code should arrive soon for them to complete their own census") }}</p>
     {% endcall %}
-    {{
-        onsButton({
-            "text": _("Continue"),
-            "variants": 'timer',
-            "classes": 'ons-u-mb-m ons-u-mt-l',
-            "attributes": {
-                'data-qa': 'btn-submit',
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Continue",
-                "data-ga-label": "Continue button click"
-            }
-        })
+    {{ onsButton({
+        "text": _("Continue") ,
+    "variants": 'timer',
+    "classes": 'ons-u-mb-m ons-u-mt-l',
+    "attributes": {
+    'data-qa': 'btn-submit',
+    "data-ga-category": "Submit button",
+    "data-ga-action": "Continue",
+    "data-ga-label": "Continue button click"
+    }
+    })
     }}
 {% endblock %}
