--- a/templates/individual_response/question.html
+++ b/templates/individual_response/question.html
@@ -1,11 +1,11 @@
 {% extends 'question.html' %}
-
 {% set save_on_signout = true %}
 {% set question = content.block.question %}
 {% set continue_button_text = _("Continue") %}
-
 {% block after_submit_button_content %}
     {% if show_contact_us_guidance %}
-      <p class='ons-u-mt-xl'>{{ _("To request a census in a different format or for further help, please <a href='{contact_us_url}'>contact us</a>").format(contact_us_url=contact_us_url) }}</p>
+        <p class='ons-u-mt-xl'>
+            {{ _("To request a census in a different format or for further help, please <a href='{contact_us_url}'>contact us</a>").format(contact_us_url=contact_us_url) }}
+        </p>
     {% endif %}
 {% endblock %}
