--- a/templates/interstitial.html
+++ b/templates/interstitial.html
@@ -1,12 +1,8 @@
 {% extends 'layouts/_questionnaire.html' %}
 {% from 'macros/helpers.html' import format_paragraphs %}
-
 {% from 'macros/helpers.html' import interviewer_note %}
-
 {% set save_on_signout = true %}
-
 {% set continue_button_text = _("Continue") %}
-
 {% block form_content %}
     {% set interstitial_instruction = format_paragraphs(block.content.instruction) %}
     {% if block.interviewer_only %}
@@ -14,9 +10,7 @@
     {% else %}
         <h1 class="question__title">{{ block.content.title }}</h1>
     {% endif %}
-    {% if interstitial_instruction %}
-        <div class="question__instruction ons-u-mb-s">{{ interstitial_instruction | safe }}</div>
-    {% endif %}
+    {% if interstitial_instruction %}<div class="question__instruction ons-u-mb-s">{{ interstitial_instruction | safe }}</div>{% endif %}
     {% set contents = block.content.contents %}
     {% include 'partials/contents.html' %}
     {% if content.individual_response_url %}
@@ -24,19 +18,17 @@
         {% include 'partials/individual-response-guidance.html' %}
     {% endif %}
 {% endblock form_content %}
-
 {% block submit_button %}
-    {{
-        onsButton({
-            "text": continue_button_text | default(_("Save and continue")),
-            "variants": 'timer',
-            "classes": "ons-u-mt-l",
-            "attributes": {
-                "data-qa": "btn-submit",
-                "data-ga-category": "Submit button",
-                "data-ga-action": "Save and continue",
-                "data-ga-label": "Save and continue button click"
-            }
-        })
+    {{ onsButton({
+        "text": continue_button_text | default(_("Save and continue") ),
+    "variants": 'timer',
+    "classes": "ons-u-mt-l",
+    "attributes": {
+    "data-qa": "btn-submit",
+    "data-ga-category": "Submit button",
+    "data-ga-action": "Save and continue",
+    "data-ga-label": "Save and continue button click"
+    }
+    })
     }}
 {% endblock %}
