--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -1,50 +1,38 @@
 {% extends 'layouts/_base.html' %}
-
 {% import 'macros/helpers.html' as helpers %}
-
 {% set form = content.form %}
-
 {# Test failing because section title is missing #}
 {# {% set page_title = <section title> + ' - ' + page_title %} #}
-
 {% set page_title = _("Introduction") %}
-
 {% block main %}
-
     {% block intro_content %}
         {% if content.block.primary_content %}
             {% for content_block in content.block.primary_content %}
-                {% set title_tag = 'h1' %}
+                {% set title_tag = "h1" %}
                 {% include 'partials/introduction/basic.html' %}
             {% endfor %}
         {% endif %}
-
         {% if preview_enabled %}
             <div class="ons-u-mb-m">
-            {{ _("<a href='{url}'>View the questions you will be asked in this survey</a>").format(url=url_for('questionnaire.get_preview')) }}
+                {{ _("<a href='{url}'>View the questions you will be asked in this survey</a>").format(url=url_for('questionnaire.get_preview')) }}
             </div>
         {% endif %}
-
         {%- if legal_basis -%}
             <h2 class="ons-u-mb-xs" data-qa="legal-response">{{ _("Your response is legally required") }}</h2>
             <p class="ons-u-mb-m" data-qa="legal-basis">{{ legal_basis }}</p>
         {%- endif -%}
-
         {% block start_survey %}
             {% include 'partials/introduction/start-survey.html' %}
         {% endblock start_survey %}
-
         {% if content.block.preview_content %}
             {% set intro = content.block.preview_content %}
             {% include 'partials/introduction/preview.html' %}
         {% endif %}
-
         {% if content.block.secondary_content %}
             {% for content_block in content.block.secondary_content %}
-                {% set title_tag = 'h2' %}
+                {% set title_tag = "h2" %}
                 {% include 'partials/introduction/basic.html' %}
             {% endfor %}
         {% endif %}
     {% endblock intro_content %}
-
 {% endblock %}
