--- a/templates/layouts/_calculatedsummary.html
+++ b/templates/layouts/_calculatedsummary.html
@@ -1,35 +1,26 @@
 {% extends 'layouts/_questionnaire.html' %}
 {% from "components/button/_macro.njk" import onsButton %}
 {% from "components/panel/_macro.njk" import onsPanel %}
-
 {% set save_on_signout = true %}
-
 {% block form_content %}
-  {% block form_title %}
-  {% endblock %}
-
-  {% call onsPanel({
-    "classes": "ons-u-mb-l"
-  }) %}
-    <p>{{ _("Please review your answers and confirm these are correct") }}</p>
-  {% endcall %}
-
-  <div class="ons-u-mb-m">
-    {% include 'partials/summary/summary.html' %}
-  </div>
+    {% block form_title %}{% endblock %}
+    {% call onsPanel({
+        "classes": "ons-u-mb-l"
+        }) %}
+        <p>{{ _("Please review your answers and confirm these are correct") }}</p>
+    {% endcall %}
+    <div class="ons-u-mb-m">{% include 'partials/summary/summary.html' %}</div>
 {% endblock -%}
-
 {% block submit_button %}
-  {{
-    onsButton({
-      "text": _("Yes, I confirm these are correct"),
-      "variants": 'timer',
-      "attributes": {
-        "data-qa": "btn-submit",
-        "data-ga-category": "Submit button",
-        "data-ga-action": "Confirm",
-        "data-ga-label": "Confirm button click"
-      }
+    {{ onsButton({
+        "text": _("Yes, I confirm these are correct") ,
+    "variants": 'timer',
+    "attributes": {
+    "data-qa": "btn-submit",
+    "data-ga-category": "Submit button",
+    "data-ga-action": "Confirm",
+    "data-ga-label": "Confirm button click"
+    }
     })
-  }}
+    }}
 {% endblock %}
