--- a/templates/partials/answers/mobilenumber.html
+++ b/templates/partials/answers/mobilenumber.html
@@ -1,23 +1,20 @@
 {% from "components/input/_macro.njk" import onsInput %}
-
 {% set input = form.fields[answer.id] if input is undefined else input %}
-
 {% set config = {
-  "id": answer.id,
-  "name": input.name,
-  "type": "tel",
-  "autocomplete": "tel",
-  "width": "15",
-  "value": input._value() | e,
-  "label": {
-    "id": answer.id ~ "-label",
-    "text": answer.label,
-    "description": answer.description
-  },
-  "attributes": {
-    "data-qa": "input-text"
-  },
-  "error": error
+    "id": answer.id,
+    "name": input.name,
+    "type": "tel",
+    "autocomplete": "tel",
+    "width": "15",
+    "value": input._value() | e,
+    "label": {
+        "id": answer.id ~ "-label",
+        "text": answer.label,
+        "description": answer.description
+    },
+    "attributes": {
+        "data-qa": "input-text"
+    },
+    "error": error
 } %}
-
-{{ onsInput(config) }}
+{{ onsInput(<djlint.settings.Config object at 0x10fa17410>) }}
