changed no validate to not equal null

--- a/templates/layouts/_base.html
+++ b/templates/layouts/_base.html
@@ -103,7 +103,7 @@
 {% endblock %}
 
 {% block bodyStart %}
-  <form class="form-class" method="POST" autocomplete="off" novalidate="null">
+  <form class="form-class" method="POST" autocomplete="off" novalidate>
 {% endblock %}
 
 {% block skipLink %}
