Change template name and references

--- a/templates/confirmation-email.html
+++ b/templates/confirmation-email.html
@@ -10,5 +10,5 @@
   {% endif %}
 
   <h1 data-qa="title">{{ _("Send a confirmation email")  }}</h1>
-  {% include 'partials/email-form.html' %}
+  {% include 'partials/confirmation-email-form.html' %}
 {% endblock %}
