--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -86,7 +86,7 @@
     <hr class="ons-u-mt-no">
     <h2 class="ons-u-mt-m">{{ _("Get confirmation email") }}</h2>
     <p>{{ _("If you would like to be sent confirmation that you have completed your survey, enter your email address") }}</p>
-    {% include 'partials/email-form.html' %}
+    {% include 'partials/confirmation-email-form.html' %}
   {% endif %}
 
   {% if content.show_feedback_call_to_action %}
