Fix if statement

--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -80,7 +80,7 @@
     {% endif %}
   {% endif %}
 
-  {% if confirmation_email_form %}
+  {% if content.confirmation_email_form %}
     <hr class="ons-u-mt-no">
     <h2 class="ons-u-mt-m">{{ _("Get confirmation email") }}</h2>
     <p>{{ _("If you would like to be sent confirmation that you have completed your survey, enter your email address") }}</p>
