update text highlighting to current suggested implementation

--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -22,7 +22,7 @@
       "iconType": "lock"
       })
   %}
-      <p>{{ _("The email will be sent from <em>census.2021@notifications.service.gov.uk</em>") }}</p>
+      <p>{{ _("The email will be sent from <strong class='ons-highlight'>census.2021@notifications.service.gov.uk</strong>") }}</p>
   {% endcall %}
 
   {% if content.show_send_another_email_guidance %}
