--- a/templates/macros/helpers.html
+++ b/templates/macros/helpers.html
@@ -12,5 +12,5 @@
 {%- endmacro -%}
 
 {%- macro interviewer_note(title=None) -%}
-    <strong class='ons-highlight'>{{ _("Interviewer note:") }}</strong>{{ " " + title }}
+    <strong class="ons-highlight">{{ _("Interviewer note:") }}</strong>{{ " " + title }}
 {%- endmacro -%}
