fix panel breaking changes

--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -7,7 +7,7 @@
 {% block main %}
     {% call onsPanel({
         "spacious": true,
-        "type": "success",
+        "variant": "success",
         "classes": "ons-u-mb-s",
         "iconType": "check",
         "iconSize": "xl"
@@ -16,7 +16,7 @@
     {% endcall %}
 
     {% call onsPanel({
-        "type": "bare",
+        "variant": "bare",
         "classes": "ons-u-mb-s",
         "iconType": "lock"
     }) %}
