--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -9,7 +9,7 @@
 {% block main %}
     {% call onsPanel({
         "spacious": true,
-        "type": "success",
+        "variant": "success",
         "classes": "ons-u-mb-s",
         "iconType": "check",
         "iconSize": "xl"
