--- a/templates/individual_response/confirmation-post.html
+++ b/templates/individual_response/confirmation-post.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     {% call onsPanel({
-        "type": "success",
+        "variant": "success",
         "classes": "ons-u-mb-m",
         "iconType": "check",
         "iconSize": "l"
