--- a/templates/layouts/_submit.html
+++ b/templates/layouts/_submit.html
@@ -12,7 +12,9 @@
 
   {% block post_title_panel %}
     {% if content.warning %}
-      {% call onsPanel({ "type": "warn"}) %}
+      {% call onsPanel({
+        "variant": "warn"
+      }) %}
         <p data-qa="warning">{{ content.warning }}</p>
       {% endcall %}
     {% endif %}
