--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -25,7 +25,7 @@
 {% block main %}
 
   {% call onsPanel({
-    "type": "success",
+    "variant": "success",
     "iconType": "check",
     "iconSize": "xl",
     "classes": "ons-u-mb-m"
