--- a/templates/individual_response/confirmation-text-message.html
+++ b/templates/individual_response/confirmation-text-message.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     {% call onsPanel({
-        "type": "success",
+        "variant": "success",
         "classes": "ons-u-mb-m",
         "iconType": "check",
         "iconSize": "l"
@@ -18,7 +18,7 @@
     {% endcall %}
 
     {% call onsPanel({
-        "type": "bare",
+        "variant": "bare",
         "classes": "ons-u-mb-s",
         "iconType": "lock"
     }) %}
