--- a/templates/partials/last_viewed_question_guidance.html
+++ b/templates/partials/last_viewed_question_guidance.html
@@ -2,10 +2,8 @@
 {% call onsPanel({
     "id": "last-viewed-question-guidance",
     "classes": "ons-u-mb-m"
-    }) %}
-  <strong>
-    {{ _("This is the last viewed question in this section") }}
-  </strong>
-  <br>
-{{ _("You can also <a id='section-start-link' href='{url}'>go back to the start of the section</a>").format(url = last_viewed_question_guidance.first_location_in_section_url)}}
+}) %}
+    <strong>{{ _("This is the last viewed question in this section") }}</strong>
+    <br>
+    {{ _("You can also <a id='section-start-link' href='{url}'>go back to the start of the section</a>").format(url = last_viewed_question_guidance.first_location_in_section_url)}}
 {% endcall %}
