revert interviewer note to mark

--- a/templates/macros/helpers.html
+++ b/templates/macros/helpers.html
@@ -12,5 +12,5 @@
 {%- endmacro -%}
 
 {%- macro interviewer_note(title=None) -%}
-    <strong>{{ _("Interviewer note:") }}</strong>{{ " " + title }}
+    <mark>{{ _("Interviewer note:") }}</mark>{{ " " + title }}
 {%- endmacro -%}
