fix breaking change

--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -35,7 +35,7 @@
     <p data-qa="guidance">
       {{ content.submission_text }}
     </p>
-    {{ onsMetadata(content.metadata) }}
+    {{ onsDescriptionList(content.metadata) }}
   {% endcall %}
 
   {% if content.guidance %}
