Add text to template and update translations

--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -44,7 +44,7 @@
   {% else %}
     <p class="ons-u-mb-s">{{ _("Your answers will be processed in the next few weeks.") }}
       {{ _("We may contact you to query your answers via phone or secure message.") }}</p>
-    <p class="ons-u-mb-s">{{ _("For more information on how we use this data.") }}<br>
+    <p class="ons-u-mb-s">{{ _("Your response will help inform decision-makers how best to support the UK population and economy.") }}<br>
       <a href="https://www.ons.gov.uk/surveys">{{ _("Learn more about how we use this data") }}</a></p>
   {% endif %}
 
